# BugBountyAI

./: .gitignore  AGENTS.md  AI.md  AI_ARCHITECTURE.md  AI_PERFORMANCE.md  AI_SEQUENCE_DIAGRAM.md  ANALYST.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_V1.md  BUGBOUNTYAI_AGENT_SPEC.md  PERFORMANCE.md  PLANNER.md  PLANNER_AUDIT.md  PROMPTS.md  README.md  WORKFLOW_ENGINE.md  bugbounty.py  context.md  main.py  pyproject.toml  requirements.txt
bugbounty/: __init__.py  cli.py
config/: config.yaml
core/: ai.py  artifacts.py  backend.py  command.py  config.py  dashboard.py  events.py  executor.py  logger.py  prompt_manager.py  registry.py  reporter.py  scan_state.py  ssh.py  telemetry.py
engine/: __init__.py  analyst.py  planner.py  scan.py  workflow.py
engine/analysis/: __init__.py  analyzer.py  classifier.py  deduplicator.py  normalizer.py
memory/: __init__.py  ai_cache.py  cache.py  conversation.py  history.py  knowledge.py
models/: __init__.py  artifact.py  capability.py  context.py  finding.py  metrics.py  objective.py  plan.py  report.py  tool.py  workflow.py
models/ai/: __init__.py  decision.py  recommendation.py  response.py  severity.py
prompts/: analysis.md  objective.md  planner.md  report.md  triage.md
providers/: base.py  capabilities.py  gemini.py
tests/: conftest.py  test_ai_integration.py  test_analyst.py  test_base.py  test_benchmark_workflow.py  test_executor.py  test_gemini.py  test_integration_tools.py  test_planner.py  test_providers.py  test_registry.py  test_reporter.py  test_reporter_output.py  test_scan.py  test_tool_parsers.py  test_tools_httpx.py  test_tools_katana.py  test_tools_naabu.py  test_tools_nuclei.py  test_tools_subfinder.py  test_workflow.py
tools/: base.py  httpx.py  katana.py  naabu.py  nuclei.py  subfinder.py
workflows/: recon.yaml
